Add personal projects and formations

--- a/src/app/components.dumb/resume-header/resume-header.component.html
+++ b/src/app/components.dumb/resume-header/resume-header.component.html
@@ -1,7 +1,7 @@
 <header>
     <p-card header="William FINZY" subheader="Développeur Angular / NextJS">
         <div class="flex gap-2 items-center">
-            <i class="pi pi-map-marker"></i>
+            <i class="pi pi-map-marker text-my-black"></i>
             <p-tag [style]="{ 'background': '#e9ebe3', 'color':'#221505'}" value="Rouen"></p-tag>
             <p-tag [style]="{ 'background': '#e9ebe3', 'color':'#221505'}" value="Full-Remote"></p-tag>
         </div>
