--- a/src/app/components.dumb/resume-experience/resume-experience.component.html
+++ b/src/app/components.dumb/resume-experience/resume-experience.component.html
@@ -1,5 +1,6 @@
 <section>
-    <p-card header="Projets chez le client">
+    <p-card subheader="En tant que prestataire chez Capgemini | Depuis mars 2021" header="Projets chez le client">
+        
         <p-carousel [value]="experiences" [numVisible]="2" [numScroll]="1" [responsiveOptions]="responsiveOptions">
             <ng-template let-experience pTemplate="item">
                 <div class="border-my-brown border-[1px] p-4 shadow-sm m-2">
@@ -13,11 +14,16 @@
                             <small class="text-center">{{experience.description}}</small>
                         </div>
                         <div class="w-full px-4 my-2">
-                            <p-scroller [items]="experience.tasks" [itemSize]="20" scrollHeight="200px" styleClass="border-1 surface-border">
+                            <p-scroller [items]="experience.tasks" [itemSize]="20" scrollHeight="250px" styleClass="border-1 surface-border">
                                 <ng-template pTemplate="item" let-task let-options="options">
                                     <small [ngClass]="{ 'bg-my-white': options.odd }" class="flex align-items-center p-2">{{ task }}</small>
                                 </ng-template>
                             </p-scroller>
+                        </div>
+                        <div class="flex flex-wrap gap-2 py-4">
+                            @for(techno of experience.technos; track techno){
+                                <p-tag [style]="{ 'background': '#D4C09E', 'color':'#221505'}" value="{{techno}}"></p-tag>
+                            }
                         </div>
                     </div>
                 </div>
