--- a/src/app/components.dumb/resume-experience/resume-experience.component.html
+++ b/src/app/components.dumb/resume-experience/resume-experience.component.html
@@ -1,8 +1,7 @@
 <section>
     <p-card subheader="En tant que prestataire chez Capgemini | Depuis mars 2021" header="Projets chez le client">
         
-        <p-carousel [value]="experiences" [numVisible]="2" [numScroll]="1" [responsiveOptions]="responsiveOptions">
-            <ng-template let-experience pTemplate="item">
+        @for(experience of experiences; track experience){
                 <div class="border-my-brown border-[1px] p-4 shadow-sm m-2">
                     <div class="flex flex-col justify-center items-center">
                         <div class="mb-3 h-[50px] w-[50px]">
@@ -14,7 +13,7 @@
                             <small class="text-center">{{experience.description}}</small>
                         </div>
                         <div class="w-full px-4 my-2">
-                            <p-scroller [items]="experience.tasks" [itemSize]="20" scrollHeight="250px" styleClass="border-1 surface-border">
+                            <p-scroller [items]="experience.tasks" [itemSize]="50" scrollHeight="200px"  styleClass="border-1 surface-border">
                                 <ng-template pTemplate="item" let-task let-options="options">
                                     <small [ngClass]="{ 'bg-my-white': options.odd }" class="flex align-items-center p-2">{{ task }}</small>
                                 </ng-template>
@@ -27,7 +26,8 @@
                         </div>
                     </div>
                 </div>
-            </ng-template>
-        </p-carousel>
+        }
+
+
     </p-card>
 </section>
