--- a/src/app/components.dumb/resume-header/resume-header.component.html
+++ b/src/app/components.dumb/resume-header/resume-header.component.html
@@ -1,10 +1,10 @@
 <header>
     <p-card header="William FINZY" subheader="Développeur Angular / NextJS">
-        <div class="flex gap-2 items-center -mt-4">
+        <!-- <div class="flex gap-2 items-center -mt-4">
             <i class="pi pi-map-marker text-my-black"></i>
             <p-tag [style]="{ 'background': '#e9ebe3', 'color':'#221505'}" value="Rouen"></p-tag>
             <p-tag [style]="{ 'background': '#e9ebe3', 'color':'#221505'}" value="Full-Remote"></p-tag>
-        </div>
+        </div> -->
 
         <div class="flex flex-col md:flex-row justify-end items-end gap-2 text-my-black">
             <a href="tel:+33647604040" target="_blank" rel="noopener noreferrer"
