--- a/src/app/components.dumb/resume/resume-experience/resume-experience.component.html
+++ b/src/app/components.dumb/resume/resume-experience/resume-experience.component.html
@@ -1,6 +1,6 @@
 <section>
     <p-card subheader="En tant que prestataire chez Capgemini | Depuis mars 2021" header="Projets chez le client">
-        <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3">
+        <div class="grid grid-cols-1 md:grid-cols-2 2xl:grid-cols-3">
             @for(experience of experiences; track experience){
             <div class="border-my-brown border-[1px] p-4 shadow-sm m-2">
                 <div class="flex flex-col justify-center items-center">
