--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,16 +1,1 @@
-<main class="px-4 lg:px-60 py-4 relative">
-    <button role="nav" class="absolute bottom-10 right-10" appScrolltop><i class="text-my-dark-brown hover:text-my-brown text-3xl pi pi-arrow-circle-up"></i></button>
-    <app-resume-header></app-resume-header>
-    <div class="py-4">
-        <app-resume-experience></app-resume-experience>
-    </div>
-    <div class="py-4">
-        <app-resume-personal-projects></app-resume-personal-projects>
-    </div>
-    <div class="py-4">
-        <app-resume-formations></app-resume-formations>
-    </div>
-    <footer>
-
-    </footer>
-</main>
+<app-hero></app-hero>
