--- a/src/app/components.dumb/resume/resume-header/resume-header.component.html
+++ b/src/app/components.dumb/resume/resume-header/resume-header.component.html
@@ -9,6 +9,10 @@
                 class="p-button rounded-full bg-my-white text-my-black hover:brightness-75">
                 <i class="pi pi-envelope mr-2"></i>william.finzy&#64;protonmail.com
             </a>
+            <a href="../../../../assets/pdfs/william_finzy_cv.pdf" target="_blank" rel="noopener noreferrer"
+                class="p-button rounded-full bg-my-white text-my-black hover:brightness-75">
+                <i class="pi pi-download mr-2"></i>Télécharger le CV
+            </a>
         </div>
     </p-card>
 </header>
