--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,8 @@
 <app-hero></app-hero>
+<section class="bg-my-white h-screen -mt-40 pt-40">
+ TEST
+</section>
+PROJETS :
+@for(project of projects; track project){
+    <p>{{project.title}}</p>
+}
