--- a/src/app/pages/resume/resume.component.html
+++ b/src/app/pages/resume/resume.component.html
@@ -1,7 +1,7 @@
-<main class="px-4 lg:px-60 py-4 relative mt-10">
+<main class="px-4 sm:px-20 lg:px-44 2xl:px-96 py-8 relative mt-20">
    
-    <div class="cursor-pointer w-[50px] h-[50px] z-40 bg-my-white absolute text-my-dark-brown flex justify-center items-center hover:text-my-brown bottom-4 right-4 sbottom-10 sright-10">
-        <mat-icon appScrolltop  aria-hidden="false"
+    <div appScrolltop class="cursor-pointer w-[50px] h-[50px] z-40 bg-my-white absolute text-my-dark-brown flex justify-center items-center hover:text-my-brown bottom-4 right-4 sbottom-10 sright-10">
+        <mat-icon   aria-hidden="false"
         aria-label="Remonter en haut" fontIcon="arrow_upward"></mat-icon>
     </div>
    
