--- a/src/app/components.dumb/layout/navbar/navbar.component.html
+++ b/src/app/components.dumb/layout/navbar/navbar.component.html
@@ -1,6 +1,23 @@
-<nav class="flex justify-between bg-my-white px-8 py-4 sticky top-0 shadow-sm z-50">
-    <a class="link" href="/">WillDev</a>
-    <div class="flex ">
+<nav [ngClass]="{'onHome':currentRoute==='/'}" appAddClassOnScroll class="navbar flex items-center justify-between px-4 sm:px-20 lg:px-44 2xl:px-96 py-2 sticky top-0 z-50">
+    <a class="link flex justify-center items-center" href="/">
+        
+        
+        <span class="text-lg font-bold">👨‍💻 William Finzy</span> 
+    </a>
+    <div class="flex md:hidden">
+        <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Menu">
+            <i class="material-icons">menu</i>
+          </button>
+        <mat-menu #menu="matMenu">
+            @for(navItem of navItems; track navItem){
+                <a href="{{navItem.path}}" mat-menu-item class="flex items-center justify-center">
+                    <mat-icon>{{navItem.icon}}</mat-icon>
+                    <span>CV</span>
+                </a>
+            }
+          </mat-menu>
+    </div>
+    <div class="hidden md:flex">
         @for(navItem of navItems; track navItem){
             <a class="link" href="{{navItem.path}}">{{navItem.label}}</a>
         }
