--- a/src/app/components.dumb/landing/hero/hero.component.html
+++ b/src/app/components.dumb/landing/hero/hero.component.html
@@ -9,24 +9,9 @@
                 <button class="btn-white">{{CTA}}</button>
             </a>
         </div>
-        <!-- <div class="see-more scale-[150%] border border-my-text border-2 rounded-full h-10 flex justify-center items-center 2xl:mt-60 pt-2">
-            <i class="material-icons text-my-text animate-bounce">arrow_downward</i>
-        </div> -->
-        <!-- <div class="mt-10 sm:m-0">
-            <app-hero-image></app-hero-image>
-        </div> -->
     </section>
-    <!-- <div class="flex justify-end absolute z-20 bottom-0">
-        <svg width="100%" height="40%" id="svg" viewBox="0 0 1440 490" xmlns="http://www.w3.org/2000/svg" >
-            <defs>
-                <linearGradient id="gradient" x1="50%" y1="100%" x2="50%" y2="0%">
-                    <stop offset="5%" stop-color="#fdf7ec"></stop>
-                    <stop offset="95%" stop-color="#d4c09e"></stop>
-                </linearGradient>
-            </defs>
-            <path d="M 0,500 L 0,187 C 91.89285714285714,204.39285714285714 183.78571428571428,221.78571428571428 303,243 C 422.2142857142857,264.2142857142857 568.75,289.25 698,258 C 827.25,226.74999999999997 939.2142857142858,139.21428571428572 1060,118 C 1180.7857142857142,96.78571428571429 1310.392857142857,141.89285714285714 1440,187 L 1440,500 L 0,500 Z" stroke="none" stroke-width="0" fill="url(#gradient)" fill-opacity="1" class="transition-all duration-300 ease-in-out delay-150 path-0" transform="rotate(-180 720 250)">
-            </path>
-        </svg>
+    <!-- <div class="-mt-20 z-50 absolute w-full bottom-0">
+        <svg width="100%" height="100px" id="svg" viewBox="0 0 1440 20" xmlns="http://www.w3.org/2000/svg" class="transition duration-300 ease-in-out delay-150"><path d="M 0,400 L 0,75 C 68.58373205741626,77.64114832535886 137.1674641148325,80.28229665071771 235,81 C 332.8325358851675,81.71770334928229 459.9138755980862,80.51196172248804 575,71 C 690.0861244019138,61.48803827751196 793.1770334928229,43.66985645933014 885,50 C 976.8229665071771,56.33014354066986 1057.377990430622,86.80861244019138 1148,95 C 1238.622009569378,103.19138755980862 1339.311004784689,89.09569377990431 1440,75 L 1440,400 L 0,400 Z" stroke="none" stroke-width="0" fill="#fdf7ec" fill-opacity="0.4" class="transition-all duration-300 ease-in-out delay-150 path-0"></path><path d="M 0,400 L 0,175 C 108.83253588516749,173.77511961722487 217.66507177033498,172.55023923444975 320,175 C 422.334928229665,177.44976076555025 518.1722488038278,183.57416267942585 598,189 C 677.8277511961722,194.42583732057415 741.6459330143542,199.1531100478469 821,189 C 900.3540669856458,178.8468899521531 995.2440191387559,153.8133971291866 1101,149 C 1206.755980861244,144.1866028708134 1323.377990430622,159.59330143540672 1440,175 L 1440,400 L 0,400 Z" stroke="none" stroke-width="0" fill="#fdf7ec" fill-opacity="0.53" class="transition-all duration-300 ease-in-out delay-150 path-1"></path><path d="M 0,400 L 0,275 C 102.05741626794256,268.73205741626793 204.1148325358851,262.46411483253587 306,259 C 407.8851674641149,255.5358851674641 509.5980861244019,254.87559808612437 598,250 C 686.4019138755981,245.12440191387563 761.4928229665072,236.03349282296648 854,241 C 946.5071770334928,245.96650717703352 1056.4306220095693,264.99043062200957 1157,273 C 1257.5693779904307,281.00956937799043 1348.7846889952152,278.0047846889952 1440,275 L 1440,400 L 0,400 Z" stroke="none" stroke-width="0" fill="#fdf7ec" fill-opacity="1" class="transition-all duration-300 ease-in-out delay-150 path-2"></path></svg>
     </div> -->
-    
 </div>
+
