--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,6 @@
 <app-hero></app-hero>
 <app-bio></app-bio>
+<app-contact></app-contact>
 <section class="bg-my-white h-screen -mt-40 pt-40">
  TEST
 </section>
