--- a/src/app/components.dumb/layout/navbar/navbar.component.html
+++ b/src/app/components.dumb/layout/navbar/navbar.component.html
@@ -1,8 +1,6 @@
 <nav [ngClass]="{'onHome':currentRoute==='/'}" appAddClassOnScroll class="navbar flex items-center justify-between px-4 sm:px-20 lg:px-44 2xl:px-96 py-2 sticky top-0 z-50">
-    <a class="link flex justify-center items-center" href="/">
-        
-        
-        <span class="text-lg font-bold">👨‍💻 William Finzy</span> 
+    <a class="text-lg font-bold link flex justify-center items-center" href="/">
+        👨‍💻 William Finzy
     </a>
     <div class="flex md:hidden">
         <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Menu">
