--- a/src/app/components.dumb/layout/navbar/navbar.component.html
+++ b/src/app/components.dumb/layout/navbar/navbar.component.html
@@ -3,7 +3,7 @@
         👨‍💻 William Finzy
     </a>
     <div class="flex md:hidden">
-        <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Menu">
+        <button class="ham-button" appAddClassOnScroll mat-icon-button [matMenuTriggerFor]="menu" aria-label="Menu">
             <i class="material-icons">menu</i>
           </button>
         <mat-menu #menu="matMenu">
