--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,4 @@
 <app-hero></app-hero>
 <app-bio></app-bio>
 <app-contact></app-contact>
-<section class="bg-my-white h-screen -mt-40 pt-40">
- TEST
-</section>
-PROJETS :
-@for(project of projects; track project){
-    <p>{{project.title}}</p>
-}
+<app-projects></app-projects>
