--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,15 +17,14 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;}
 * {
     color: #160f0b;
 }
-.titleh2 {
-    font-size: 2rem;
-    margin: 0 0 4rem 0;
+
+.success-snack {
+    --mdc-snackbar-container-color: #e9ebe3;
+    --mdc-snackbar-supporting-text-color: #535b3d;
+    --mat-snack-bar-button-color: #535b3d;
 }
-.titleh2::before {
-    content: "";
-    position: absolute;
-    background-color: #D4C09E;
-    width: 80px;
-    margin-top: 35px;
-    height: 5px;
+.error-snack {
+    --mdc-snackbar-supporting-text-color: #dc2626 !important;
+    --mat-snack-bar-button-color: #dc2626 !important;
+    --mdc-snackbar-container-color: #fecaca !important;
 }
