--- a/src/app/components.dumb/landing/projects/projects.component.html
+++ b/src/app/components.dumb/landing/projects/projects.component.html
@@ -1,1 +1,21 @@
-<p>projects works!</p>
+<section id="bio" class="pt-60">
+    <h2 class="text-center titleh2">Les projets sur lesquels j'ai travaillé</h2>
+
+    @for(project of projects; track project){
+        <mat-card class="example-card">
+            <mat-card-header>
+              <mat-card-title>Shiba Inu</mat-card-title>
+              <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content>
+              <p>This card indeterminates progress bar.</p>
+              <p>{{project.title}}</p>
+            </mat-card-content>
+            <mat-card-actions>
+              <button mat-button>LIKE</button>
+              <button mat-button>SHARE</button>
+            </mat-card-actions>
+          </mat-card>
+          
+    }
+</section>
