--- a/src/app/components.dumb/layout/navbar/navbar.component.scss
+++ b/src/app/components.dumb/layout/navbar/navbar.component.scss
@@ -5,10 +5,20 @@
     margin-bottom: -100px;
     transition: all ease-out .3s;
 }
-.navbar:not(.onHome), .scrolled {
+.navbar:not(.onHome), .navbar.scrolled {
     background-color: #fdf7ec;
     &>*{color: #221505;}
     height: 80px;
     margin-bottom: -80px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+.ham-button {
+    * {
+        color: #fdf7ec;
+    }
+}
+.ham-button.scrolled {
+    * {
+        color: #221505;
+    }
 }
