--- a/src/app/components.dumb/landing/projects/projects.component.scss
+++ b/src/app/components.dumb/landing/projects/projects.component.scss
@@ -10,3 +10,12 @@
     margin-top: 38px;
     height: 5px;
 }
+
+.card {
+    border-radius: 0.5rem;
+    padding-bottom: 10px;
+}
+
+  .description {
+    margin: 20px 0;
+  }
