--- a/src/app/components.dumb/layout/footer/footer.component.html
+++ b/src/app/components.dumb/layout/footer/footer.component.html
@@ -1,1 +1,38 @@
-<p>footer works!</p>
+<svg preserveAspectRatio="none" class="absolute -mt-20 z-30 h-[100px]" width="100%" height="100%" id="svg"
+    viewBox="0 0 1440 390">
+    <path
+        d="M 0,400 L 0,100 C 107.68421052631578,79.81818181818181 215.36842105263156,59.63636363636364 324,70 C 432.63157894736844,80.36363636363636 542.2105263157895,121.27272727272728 625,116 C 707.7894736842105,110.72727272727272 763.7894736842105,59.272727272727266 848,64 C 932.2105263157895,68.72727272727273 1044.6315789473686,129.63636363636365 1148,145 C 1251.3684210526314,160.36363636363635 1345.6842105263158,130.1818181818182 1440,100 L 1440,400 L 0,400 Z"
+        stroke="none" stroke-width="0" fill="#d4c09e" fill-opacity="0.53"
+        class="transition-all duration-300 ease-in-out delay-150 path-0"></path>
+    <path
+        d="M 0,400 L 0,233 C 81.03349282296651,245.87081339712918 162.06698564593302,258.74162679425837 273,263 C 383.933014354067,267.25837320574163 524.7655502392345,262.9043062200957 615,248 C 705.2344497607655,233.09569377990428 744.8708133971293,207.64114832535884 830,214 C 915.1291866028707,220.35885167464116 1045.751196172249,258.5311004784689 1155,267 C 1264.248803827751,275.4688995215311 1352.1244019138755,254.23444976076556 1440,233 L 1440,400 L 0,400 Z"
+        stroke="none" stroke-width="0" fill="#d4c09e" fill-opacity="1"
+        class="transition-all duration-300 ease-in-out delay-150 path-1"></path>
+</svg>
+<footer class="bg-my-brown flex flex-col justify-between py-8">
+    <div class="grid grid-cols-1 md:grid-cols-3 my-4">
+        <div class="flex flex-col items-start px-10 md:px-0">
+            <a class="text-my-black text-lg font-bold flex justify-center items-center" href="/">
+                👨‍💻 William Finzy
+            </a>
+            <p>
+                William FINZY, développeur d'applications et sites web sur les régions Nord, Normandie et Ile de France.
+            </p>
+        </div>
+        <div class="px-10 md:px-0 flex flex-col">
+            
+        </div>
+        <div class="flex flex-wrap justify-center md:justify-end items-center gap-2">
+            <a href="https://www.linkedin.com/in/williamfinzy/" target="_blank" rel="noopener noreferrer">
+                <i style="font-size: 1.5rem" class="text-my-black pi pi-linkedin mr-2"></i>
+            </a>
+            <a href="https://github.com/willfynch" target="_blank" rel="noopener noreferrer">
+                <i style="font-size: 1.5rem" class="text-my-black pi pi-github mr-2"></i>
+            </a>
+        </div>
+    </div>
+    <div class="mx-10 md:mx-0 border-t-[1px] border-my-white pt-4 justify-between flex flex-col md:flex-row items-center">
+        <span>Fait avec ❤️‍🔥 par <a href="https://willdev.me" target="_blank">William FINZY</a> </span>
+        <span>© Tous droits réservés 2024. </span>
+    </div>
+</footer>
