perfs increase / wip

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import './tailwind.css';
+@import 'primeicons/primeicons.css';
 
 html {
     scroll-behavior: smooth;
