--- a/src/app/components.dumb/landing/hero/hero.component.html
+++ b/src/app/components.dumb/landing/hero/hero.component.html
@@ -5,9 +5,9 @@
         <div
             class="absolute h-full w-full z-20 h-screen px-4 sm:px-20 lg:px-44 2xl:px-96 bg-my-black/70 flex gap-4 flex-col justify-center items-center">
             <div class="w-full flex flex-col items-center sm:items-start">
-                <h1 class="hero-title text-my-white/80 text-center sm:text-justify">{{TITLE}}
+                <h1 class="hero-title text-my-text text-center sm:text-justify">{{TITLE}}
                 </h1>
-                <p class="text-my-white/60 hero-paragraph text-center sm:text-justify w-[300px] sm:w-[500px]">
+                <p class="text-my-text hero-paragraph text-center sm:text-justify w-[300px] sm:w-[500px]">
                     {{SUBTITLE}}</p>
                 <a href="resume">
                     <button class="btn-white">{{CTA}}</button>
