--- a/src/app/components.dumb/landing/hero/hero.component.scss
+++ b/src/app/components.dumb/landing/hero/hero.component.scss
@@ -1,26 +1,27 @@
 .hero-title {
     font-weight: 900;
-    font-size: 1.5rem;
+    font-size: 4rem;
+    font-family: "Caveat", cursive;
 }
 .hero-paragraph {
-    font-size: .8rem;
+    font-size: 1rem;
 }
 @media (min-width:400px)  {
     .hero-title {
-        font-size:2rem;
-    }
-
-}
-@media (min-width:700px)  {
-    .hero-title {
-        font-size:2.5rem;
-    }
-
-}
-@media (min-width:1200px)  {
-    .hero-title {
         font-size:3rem;
     }
+
+ }
+// @media (min-width:700px)  {
+//     .hero-title {
+//         font-size:2.5rem;
+//     }
+
+// }
+@media (min-width:1200px)  {
+    // .hero-title {
+    //     font-size:3rem;
+    // }
     .hero-paragraph {
         font-size: 1.2rem;
     }
